force-app/main/default/objects/Asset/fields/CategoryFamily__c.field-meta.xml
<CustomField>
    <fullName>CategoryFamily__c</fullName>
    <label>Categoria Famiglia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>