force-app/main/default/objects/Asset/fields/ConsumptionRangeEE__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionRangeEE__c</fullName>
    <description>Campo di configurazione usato per indicare la fascia di Consumo EE per il record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <formula>TEXT(Range__r.RangeConsumptionEle__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fasce Consumo EE</label>
    <type>Text</type>
</CustomField>