force-app/main/default/objects/Asset/fields/DelayDay__c.field-meta.xml
<CustomField>
    <fullName>DelayDay__c</fullName>
    <description>Il Delay del prodotto in gg</description>
    <formula>Product2.DelayDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>