force-app/main/default/objects/Asset/fields/DurationDay__c.field-meta.xml
<CustomField>
    <fullName>DurationDay__c</fullName>
    <description>La Durata del prodotto in gg</description>
    <formula>Product2.DurationDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durata</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>