force-app/main/default/objects/Asset/fields/DurationDayGas__c.field-meta.xml
<CustomField>
    <fullName>DurationDayGas__c</fullName>
    <formula>Product2.DurationDayGas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durata Gas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>