force-app/main/default/objects/Asset/fields/DurationVas__c.field-meta.xml
<CustomField>
    <fullName>DurationVas__c</fullName>
    <description>Durata di applicazione del contratto dei VAS</description>
    <label>VAS - Durata</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>