force-app/main/default/objects/Asset/fields/DwellingType__c.field-meta.xml
<CustomField>
    <fullName>DwellingType__c</fullName>
    <description>La tipologia di abitazione legata al dato record di asset</description>
    <label>Tipo di Abitazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_DwellingType</valueSetName>
    </valueSet>
</CustomField>