force-app/main/default/objects/Asset/fields/GlobalMigrationKey__c.field-meta.xml
<CustomField>
    <fullName>GlobalMigrationKey__c</fullName>
    <description>Generato in fase di migrazione.</description>
    <externalId>true</externalId>
    <label>Chiave globale di migrazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>