force-app/main/default/objects/Asset/fields/GreenGasOption__c.field-meta.xml
<CustomField>
    <fullName>GreenGasOption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Usato per indicare se è presente(o meno) la presenza dell&apos;opzone Energia Verde per il dato record di Asset</description>
    <label>Green Gas Option</label>
    <type>Checkbox</type>
</CustomField>