force-app/main/default/objects/Asset/fields/IVA__c.field-meta.xml
<CustomField>
    <fullName>IVA__c</fullName>
    <formula>Product2.IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>