force-app/main/default/objects/Asset/fields/MinimumPieceNumber__c.field-meta.xml
<CustomField>
    <fullName>MinimumPieceNumber__c</fullName>
    <label>Numero Minimo pezzi</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>