force-app/main/default/objects/Asset/fields/OwnerAC__c.field-meta.xml
<CustomField>
    <fullName>OwnerAC__c</fullName>
    <description>Indica se il dato record di asset deve essere associato al Proprietario della fornitura</description>
    <label>Proprietario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>