force-app/main/default/objects/Asset/fields/PDRCode__c.field-meta.xml
<CustomField>
    <fullName>PDRCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Il codice PDR associato al dato record di asset</description>
    <label>Codice PDR</label>
    <referenceTo>SaleServiceItem__c</referenceTo>
    <relationshipLabel>Assets (Codice PDR)</relationshipLabel>
    <relationshipName>PDRAssets</relationshipName>
    <type>Lookup</type>
</CustomField>