force-app/main/default/objects/Asset/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <formula>Product2.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prezzo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>