force-app/main/default/objects/Asset/fields/PriceFromThirds__c.field-meta.xml
<CustomField>
    <fullName>PriceFromThirds__c</fullName>
    <formula>Product2.PriceFromThirds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prezzo da Terzi</label>
    <type>Checkbox</type>
</CustomField>