force-app/main/default/objects/Asset/fields/SupplierOutcome__c.field-meta.xml
<CustomField>
    <fullName>SupplierOutcome__c</fullName>
    <label>Esito Fornitore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEL - CLT NON TROVATO</fullName>
            </value>
            <value>
                <fullName>RIFIUTATO preventivamente</fullName>
            </value>
            <value>
                <fullName>CONSEGNA/Installazione RIFIUTATA</fullName>
            </value>
            <value>
                <fullName>CLIENTE NON TROVATO</fullName>
            </value>
            <value>
                <fullName>INSTALLAZIONE FALLITA</fullName>
            </value>
            <value>
                <fullName>Consegnato/installato/attivato</fullName>
            </value>
            <value>
                <fullName>DA RICHIAMARE</fullName>
            </value>
            <value>
                <fullName>USCITA A VUOTO</fullName>
            </value>
            <value>
                <fullName>PRESTAZIONE ESEGUITA</fullName>
            </value>
            <value>
                <fullName>Richiesta sostituzione</fullName>
            </value>
            <value>
                <fullName>SOSTITUITO</fullName>
            </value>
            <value>
                <fullName>RESO (PRODOTTO)</fullName>
            </value>
            <value>
                <fullName>DISATTIVATO/DISDETTO (SERVIZIO)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>