force-app/main/default/objects/Asset/fields/VasCommunicationProgressive__c.field-meta.xml
<CustomField>
    <fullName>VasCommunicationProgressive__c</fullName>
    <description>incrementato di uno alla variazione di VasCommunicationDate__c (max intervallo 1 al giorno)</description>
    <label>Numero comunicazione</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>