force-app/main/default/objects/Asset/fields/VasPracticeCode__c.field-meta.xml
<CustomField>
    <fullName>VasPracticeCode__c</fullName>
    <label>Codice Pratica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>