force-app/main/default/objects/Asset/fields/VasReplacementDate__c.field-meta.xml
<CustomField>
    <fullName>VasReplacementDate__c</fullName>
    <label>Data Sostituito</label>
    <type>Date</type>
</CustomField>