force-app/main/default/objects/Asset/fields/VasReplacementRequestDate__c.field-meta.xml
<CustomField>
    <fullName>VasReplacementRequestDate__c</fullName>
    <label>Data Richiesta Sostituzione</label>
    <type>Date</type>
</CustomField>