force-app/main/default/objects/Asset/fields/VasReturnedProductDate__c.field-meta.xml
<CustomField>
    <fullName>VasReturnedProductDate__c</fullName>
    <label>Data reso prodotto</label>
    <type>Date</type>
</CustomField>