force-app/main/default/objects/Asset/fields/VasShippingDate__c.field-meta.xml
<CustomField>
    <fullName>VasShippingDate__c</fullName>
    <label>Data spedizione</label>
    <type>Date</type>
</CustomField>