force-app/main/default/objects/Asset/fields/VasSupplierStatus__c.field-meta.xml
<CustomField>
    <fullName>VasSupplierStatus__c</fullName>
    <label>Stato fornitore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>