force-app/main/default/objects/Asset/fields/VasSupplierStatusDetails__c.field-meta.xml
<CustomField>
    <fullName>VasSupplierStatusDetails__c</fullName>
    <label>Dettaglio stato fornitore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>