force-app/main/default/objects/Asset/recordTypes/HDT_RT_SectionBonusforEEservice.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_SectionBonusforEEservice</fullName>
    <active>true</active>
    <description>Bonus per servizio_EE</description>
    <label>HDT RT Sezione Bonus per servizio EE</label>
</RecordType>