force-app/main/default/objects/Asset/recordTypes/HDT_RT_SectionContributesforEEservice.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_SectionContributesforEEservice</fullName>
    <active>true</active>
    <description>Sezione Contributi per servizio EE</description>
    <label>HDT RT Sezione Contributi per servizio EE</label>
</RecordType>