force-app/main/default/objects/Asset/recordTypes/HDT_RT_VASPoductsnotbillable.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_VASPoductsnotbillable</fullName>
    <active>true</active>
    <description>Prodotti non fatturabili</description>
    <label>HDT RT VAS Prodotti non fatturabili</label>
</RecordType>